--- a/src/components/SearchBar/styles.css
+++ b/src/components/SearchBar/styles.css
@@ -1,5 +1,38 @@
-.cartop-search-bar{
+.cartop-search-bar {
+    display: flex;
+    margin: 40px 10px;
+
+}
+
+.cartop-search-bar input {
+    width: calc(100% - 80px);
     height: 40px;
-   display: flex;
+    border: 1px solid var(--color-border-placeholder);
     border-radius: 5px 0 0 5px;
+    padding: 15px;
+    font-size: 16px;
+
+}
+
+.cartop-search-bar input:focus {
+
+    outline: none;
+}
+
+.cartop-search-bar input::placeholder {
+    color: var(--color-font-placeholder);
+
+}
+
+.cartop-search-bar button {
+    width: 77px;
+    height: 40px;
+    background-color: var(--color-bg-btn);
+    border-radius: 0 5px 5px 0;
+    border: none;
+    color: var(--color-font-sencundary);
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+
 }
