Terminated pages styles

--- a/src/components/CatalogCard/styles.css
+++ b/src/components/CatalogCard/styles.css
@@ -1,6 +1,45 @@
-.cartop-card{
-    width: 300px;
-    height: 347px;
-    border-radius: 10px;
-    background-color: var(--color-bg-terciary);
-  }
+.cartop-card {
+  width: 300px;
+  height: 347px;
+  border-radius: 10px;
+  background-color: var(--color-bg-terciary);
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  margin: 40px -10px;
+
+}
+
+.cartop-card img {
+  width: 222px;
+  height: 165px;
+  margin: 14px 43px 8px 40px;
+}
+
+.title-h2-catalog {
+  height: 21px;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.cartop-card p {
+  height: 32px;
+  color: var(--color-font-quaternary);
+  font-size: 14px;
+  font-weight: 400;
+  margin: 16px 22px 38px 14px;
+
+}
+
+.cartop-card button {
+  width: 260px;
+  height: 40px;
+  border-radius: 5px
+}
+
+.cartop-btn-submit {
+  text-align: center;
+  margin: 38px 22px 15px 20px;
+}
